# douyin

./: .gitignore  AGENTS.md  README.md  README_MAC.md  build_exe.ps1  douyin-download  install_mac.sh  pyproject.toml  requirements.txt
douyin_downloader/: __init__.py  cdp.py  cli.py  downloader.py  gui.py
tests/: test_cli.py
