[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "douyin-video-downloader"
version = "0.1.0"
description = "Download Douyin (TikTok China) videos by URL."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]
keywords = ["douyin", "tiktok", "video", "downloader", "yt-dlp"]
dependencies = [
  "yt-dlp>=2024.1.1",
  "websocket-client>=1.6.0",
]

[project.urls]
Homepage = "https://github.com/TonyZhang1996/douyin"
Repository = "https://github.com/TonyZhang1996/douyin"
Issues = "https://github.com/TonyZhang1996/douyin/issues"

[project.scripts]
douyin-dl = "douyin_downloader.cli:main"
douyin-dl-gui = "douyin_downloader.gui:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["douyin_downloader*"]
